--- a/blog-express/package.json
+++ b/blog-express/package.json
@@ -10,8 +10,15 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.0.2",
+    "cookie-parser": "^1.0.1",
+    "errorhandler": "^1.0.1",
     "express": "4.1.2",
+    "express-session": "^1.0.4",
     "jade": "1.3.1",
+    "method-override": "^1.0.0",
+    "mongoskin": "^0.6.1",
+    "morgan": "^1.0.1",
     "stylus": "0.44.0"
   },
   "devDependencies": {
