add front-end code

--- a/blog-express/Makefile
+++ b/blog-express/Makefile
@@ -1,6 +1,10 @@
 REPORTER = list
 MOCHA_OPTS = --ui bdd -c
 
+db:
+	echo Seeding blog-test *****
+	./db/seed.sh
+
 test:
 	clear
 	echo Starting test **********
@@ -10,4 +14,4 @@ test:
 	tests/*.js
 	echo Ending test
 
-.PHONY: test
+.PHONY: test db
