--- a/blog-express/package.json
+++ b/blog-express/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.0.2",
     "cookie-parser": "^1.0.1",
     "errorhandler": "^1.0.1",
+    "everyauth": "^0.4.5",
     "express": "4.1.2",
     "express-session": "^1.0.4",
     "jade": "1.3.1",
